--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
       font-family: "EB Garamond", serif;
       font-optical-sizing: auto;
     }
+    .card{
+      display: flex;
+      flex-direction: column;
+    }
+    .card h3{
+      font-size: 2rem;
+      font-weight: 800;
+      margin: 16px 0px;
+      font-family: "EB Garamond", serif;
+      color: #414040;
+    }
+    .card p{
+      color: #707070;
+      margin-bottom: 2rem;
+    }
+    button{
+      cursor: pointer;
+    }
   </style>
 </head>
 
@@ -42,7 +60,7 @@
         <button class="px-7 py-4 bg-[#B68C5A] text-white text-lg font-semibold rounded-md">Free Consultation</button>
       </div>
     </nav>
-    <section class="max-w-[1170px] mx-auto">
+    <section class="max-w-[1170px] mx-auto mb-[100px]">
       <div class="relative bg-[url(/images/banner.png)] min-h-[550px] bg-cover bg-center rounded-lg flex flex-col justify-center px-8">
         <div class="absolute inset-0 bg-gradient-to-t from-[#111111] to-transparent"></div>
 
@@ -58,7 +76,52 @@
     </section>
 
   </header>
-  <main></main>
+  <main>
+    <section class="max-w-[1170px] mx-auto">
+      <div class="text-center">
+        <h2 class="text-[40px] font-extrabold eb-font text-[#414040] mb-4">The Legal Practice Area</h2>
+        <p class="max-w-[714px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+      </div>
+      <div class="grid md:grid-cols-3">
+        <div class="card p-6 text-center">
+          <img class="h-[72px] object-contain" src="./images/business.png" alt="">
+          <h3>Business Law</h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <button class="w-fit self-center"><img src="./images/Frame.png" alt=""></button>
+        </div>
+        <div class="card p-6">
+          <img src="" alt="">
+          <h3>Criminal Law</h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <button><img src="./images/Frame.png" alt=""></button>
+        </div>
+        <div class="card p-6">
+          <img src="" alt="">
+          <h3>Child Support</h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <button><img src="./images/Frame.png" alt=""></button>
+        </div>
+        <div class="card p-6">
+          <img src="" alt="">
+          <h3>Education Law</h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <button><img src="./images/Frame.png" alt=""></button>
+        </div>
+        <div class="card p-6">
+          <img src="" alt="">
+          <h3>Divorce Law</h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <button><img src="./images/Frame.png" alt=""></button>
+        </div>
+        <div class="card p-6">
+          <img src="" alt="">
+          <h3>Tax Law</h3>
+          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          <button><img src="./images/Frame.png" alt=""></button>
+        </div>
+      </div>
+    </section>
+  </main>
   <footer></footer>
 </body>
 
