--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
     button {
       cursor: pointer;
     }
+    .faq-card{
+      padding: 32px;
+      background-color: #F3F3F3;
+      border-radius: 8px;
+    }
   </style>
 </head>
 
@@ -95,7 +100,7 @@
     <section class="max-w-[1170px] mx-auto mb-[60px] md:mb-[120px]">
       <div class="text-center mb-16">
         <h2 class="text-[40px] font-extrabold eb-font text-[#414040] mb-4">The Legal Practice Area</h2>
-        <p class="lg:max-w-[714px] px-6 lg:px-0 mx-auto">There are many variations of passages of Lorem Ipsum available, but the
+        <p class="lg:max-w-[714px] px-6 lg:px-0 mx-auto text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the
           majority have suffered alteration in some form, by injected humour.</p>
       </div>
       <div class="grid md:grid-cols-3">
@@ -149,7 +154,7 @@
 
       <div class="text-center mb-16">
         <h2 class="text-[40px] font-extrabold eb-font text-[#414040] mb-4">What Our Client Say</h2>
-        <p class="max-w-[714px] mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        <p class="max-w-[714px] mx-auto text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
       </div>
 
       <div class="bg-cover bg-center rounded-lg" style="background-image: url(./images/banner.png);">
@@ -173,6 +178,32 @@
         </div>
       </div>
     </section>
+
+    <!-- faq section -->
+     <section class="max-w-[1170px] mx-auto mb-[100px]">
+      <div class="text-center mb-[64px]">
+        <h2 class="text-[40px] font-extrabold eb-font text-[#414040] mb-4">Frequently Asked Any Questions</h2>
+        <p class="max-w-[714px] mx-auto text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+      </div>
+      <div class="flex gap-6 flex-col md:flex-row">
+        <div class="flex-1">
+          <div class="faq-card mb-4">
+            <h3 class="eb-font text-2xl font-extrabold text-[#414040] mb-4">1. Are application fee waivers available?</h3>
+            <p class="text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+          </div>
+          <div class="faq-card mb-4">
+            <h3 class="eb-font text-2xl font-extrabold text-[#414040]">2. Are application fee waivers available?</h3>
+          </div>
+          <div class="faq-card mb-4">
+            <h3 class="eb-font text-2xl font-extrabold text-[#414040]">3. Are application fee waivers available?</h3>
+          </div>
+          <div class="faq-card">
+            <h3 class="eb-font text-2xl font-extrabold text-[#414040]">4. Are application fee waivers available?</h3>
+          </div>
+        </div>
+        <div class="flex-1 self-center"><img class="md:max-w-[520px]" src="./images/faq.png" alt=""></div>
+      </div>
+     </section>
   </main>
   <footer></footer>
 </body>
