footer section done

--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     button {
       cursor: pointer;
     }
-    .faq-card{
+
+    .faq-card {
       padding: 32px;
       background-color: #F3F3F3;
       border-radius: 8px;
@@ -62,6 +63,7 @@
 </head>
 
 <body class="poppins">
+
   <header class="px-4">
     <nav class="max-w-[1170px] mx-auto flex justify-between mt-8 md:mt-12 items-center mb-[50px]">
       <div><img src="./images/logo2.png" alt=""></div>
@@ -76,6 +78,7 @@
         <button class="px-7 py-4 bg-[#B68C5A] text-white text-lg font-semibold rounded-md">Free Consultation</button>
       </div>
     </nav>
+
     <section class="max-w-[1170px] mx-auto mb-[60px] md:mb-[120px]">
       <div
         class="relative bg-[url(/images/banner.png)] min-h-[550px] bg-cover bg-center rounded-lg flex flex-col justify-center px-8">
@@ -96,21 +99,29 @@
     </section>
 
   </header>
-  <main>
+
+
+  <main class="px-4">
+
     <section class="max-w-[1170px] mx-auto mb-[60px] md:mb-[120px]">
+
       <div class="text-center mb-16">
         <h2 class="text-[40px] font-extrabold eb-font text-[#414040] mb-4">The Legal Practice Area</h2>
-        <p class="lg:max-w-[714px] px-6 lg:px-0 mx-auto text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the
+        <p class="lg:max-w-[714px] px-6 lg:px-0 mx-auto text-[#707070]">There are many variations of passages of Lorem
+          Ipsum available, but the
           majority have suffered alteration in some form, by injected humour.</p>
       </div>
-      <div class="grid md:grid-cols-3">
-        <div class="card p-16 text-center">
+
+      <div class="grid md:grid-cols-2 lg:grid-cols-3">
+
+        <div class="card p-16 text-center ">
           <img class="h-[72px] object-contain" src="./images/business.png" alt="">
           <h3>Business Law</h3>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
             in some form, by injected humour.</p>
           <button class="w-fit self-center"><img src="./images/Frame.png" alt=""></button>
         </div>
+
         <div class="card p-16 text-center border-l border-gray-200">
           <img class="h-[72px] object-contain" src="./images/criminal.png" alt="">
           <h3>Criminal Law</h3>
@@ -118,27 +129,31 @@
             in some form, by injected humour.</p>
           <button class="w-fit self-center"><img src="./images/Frame.png" alt=""></button>
         </div>
-        <div class="card p-16 text-center border-l border-gray-200">
+
+        <div class="card p-16 text-center lg:border-l md:border-l-0 border-gray-200 md:border-t lg:border-t-0">
           <img class="h-[72px] object-contain" src="./images/child.png" alt="">
           <h3>Child Support</h3>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
             in some form, by injected humour.</p>
           <button class="w-fit self-center"><img src="./images/Frame.png" alt=""></button>
         </div>
-        <div class="card p-16 text-center border-t-0 md:border-t border-gray-200">
+
+        <div class="card p-16 text-center border-t-0 md:border-t border-gray-200 md:border-l lg:border-l-0">
           <img class="h-[72px] object-contain" src="./images/education.png" alt="">
           <h3>Education Law</h3>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
             in some form, by injected humour.</p>
           <button class="w-fit self-center"><img src="./images/Frame.png" alt=""></button>
         </div>
-        <div class="card p-16 text-center border-t-0 md:border-t border-l border-gray-200">
+
+        <div class="card p-16 text-center border-t-0 md:border-t lg:border-l md:border-l-0 border-gray-200">
           <img class="h-[72px] object-contain" src="./images/divorce.png" alt="">
           <h3>Divorce Law</h3>
           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
             in some form, by injected humour.</p>
           <button class="w-fit self-center"><img src="./images/Frame.png" alt=""></button>
         </div>
+
         <div class="card p-16 text-center border-l border-t-0 md:border-t border-gray-200">
           <img class="h-[72px] object-contain" src="./images/tax.png" alt="">
           <h3>Tax Law</h3>
@@ -146,7 +161,9 @@
             in some form, by injected humour.</p>
           <button class="w-fit self-center"><img src="./images/Frame.png" alt=""></button>
         </div>
+
       </div>
+
     </section>
 
     <!-- review section -->
@@ -154,15 +171,18 @@
 
       <div class="text-center mb-16">
         <h2 class="text-[40px] font-extrabold eb-font text-[#414040] mb-4">What Our Client Say</h2>
-        <p class="max-w-[714px] mx-auto text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        <p class="max-w-[714px] mx-auto text-[#707070]">There are many variations of passages of Lorem Ipsum available,
+          but the majority have suffered alteration in some form, by injected humour.</p>
       </div>
 
       <div class="bg-cover bg-center rounded-lg" style="background-image: url(./images/banner.png);">
 
         <div class="bg-black/75 py-24 text-white text-center px-4 rounded-xl flex items-center">
+
           <div>
-            <butto class="px-4"n><i class="fa-solid fa-angle-left text-white"></i></button>
+            <button class="px-4" n><i class="fa-solid fa-angle-left text-white"></i></button>
           </div>
+
           <div class="flex flex-col items-center flex-1">
             <img class="w-16 rounded-full mb-6 border-2 border-gray-200" src="./images/buyer.png" alt="">
             <h3 class="font-extrabold eb-font text-2xl">Foysal Hossain</h3>
@@ -172,40 +192,157 @@
               Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more
               obscure Latin words, consectetur.</p>
           </div>
+
           <div>
             <button class="px-4"><i class="fa-solid fa-angle-right text-white"></i></button>
           </div>
+
         </div>
+
       </div>
     </section>
 
     <!-- faq section -->
-     <section class="max-w-[1170px] mx-auto mb-[100px]">
+    <section class="max-w-[1170px] mx-auto mb-[100px]">
+
       <div class="text-center mb-[64px]">
         <h2 class="text-[40px] font-extrabold eb-font text-[#414040] mb-4">Frequently Asked Any Questions</h2>
-        <p class="max-w-[714px] mx-auto text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        <p class="max-w-[714px] mx-auto text-[#707070]">There are many variations of passages of Lorem Ipsum available,
+          but the majority have suffered alteration in some form, by injected humour.</p>
       </div>
-      <div class="flex gap-6 flex-col md:flex-row">
+
+      <div class="flex gap-6 flex-col lg:flex-row">
+
         <div class="flex-1">
+
           <div class="faq-card mb-4">
-            <h3 class="eb-font text-2xl font-extrabold text-[#414040] mb-4">1. Are application fee waivers available?</h3>
-            <p class="text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+            <h3 class="eb-font text-2xl font-extrabold text-[#414040] mb-4">1. Are application fee waivers available?
+            </h3>
+            <p class="text-[#707070]">There are many variations of passages of Lorem Ipsum available, but the majority
+              have suffered alteration in some form, by injected humour.</p>
           </div>
+
           <div class="faq-card mb-4">
             <h3 class="eb-font text-2xl font-extrabold text-[#414040]">2. Are application fee waivers available?</h3>
           </div>
+
           <div class="faq-card mb-4">
             <h3 class="eb-font text-2xl font-extrabold text-[#414040]">3. Are application fee waivers available?</h3>
           </div>
+
           <div class="faq-card">
             <h3 class="eb-font text-2xl font-extrabold text-[#414040]">4. Are application fee waivers available?</h3>
           </div>
+
         </div>
+
         <div class="flex-1 self-center"><img class="md:max-w-[520px]" src="./images/faq.png" alt=""></div>
+
       </div>
-     </section>
+    </section>
+
+    <!-- contact section -->
+    <section class="max-w-[1170px] mx-auto mb-[100px]">
+
+      <div class="text-center mb-[64px]">
+        <h2 class="text-[40px] font-extrabold eb-font text-[#414040] mb-4">Contact With Us</h2>
+        <p class="max-w-[714px] mx-auto text-[#707070]">There are many variations of passages of Lorem Ipsum available,
+          but the majority have suffered alteration in some form, by injected humour.</p>
+      </div>
+
+      <div class="flex gap-6 flex-col lg:flex-row">
+
+        <div class="flex-1 grid grid-cols-2 bg-[#F3F3F3]">
+
+          <div class="text-center p-8 lg:p-12 border-r border-gray-200">
+            <img class="mb-4 mx-auto" src="./images/location.png" alt="">
+            <h3 class="mb-4 text-2xl eb-font font-extrabold text-[#414040]">Address</h3>
+            <p class="text-[#707070]">A108 Adam Street, <br>
+              New York, NY 535022</p>
+          </div>
+
+          <div class="text-center p-8 lg:p-12">
+            <img class="mb-4 mx-auto" src="./images/call.png" alt="">
+            <h3 class="mb-4 text-2xl eb-font font-extrabold text-[#414040]">Call Us</h3>
+            <p class="text-[#707070]">+88 01750 00 00 00 <br>
+              +88 01750 00 00 00</p>
+          </div>
+
+          <div class="text-center p-8 lg:p-12 border-gray-200 border-t border-r">
+            <img class="mb-4 mx-auto" src="./images/email.png" alt="">
+            <h3 class="mb-4 text-2xl eb-font font-extrabold text-[#414040]">Email Us</h3>
+            <p class="text-[#707070]">info@gmail.com <br>
+              info@gmail.com</p>
+          </div>
+
+          <div class="text-center p-8 lg:p-12 border-gray-200 border-t">
+            <img class="mb-4 mx-auto" src="./images/time.png" alt="">
+            <h3 class="mb-4 text-2xl eb-font font-extrabold text-[#414040]">Working Hours</h3>
+            <p class="text-[#707070]">Mon-Fri: 9AM to 5PM <br>
+              Sunday: 9AM to 1 PM</p>
+          </div>
+
+        </div>
+
+        <!-- form container -->
+        <div class="flex-1 flex flex-col gap-6">
+          <input class="p-6 bg-[#F3F3F3] rounded-lg" type="text" placeholder="Name">
+          <input class="p-6 bg-[#F3F3F3] rounded-lg" type="text" placeholder="Your Email">
+          <input class="p-6 bg-[#F3F3F3] rounded-lg" type="text" placeholder="Subject">
+          <textarea class="p-6 bg-[#F3F3F3] rounded-lg flex-1" name="" id="" placeholder="Your Message"></textarea>
+          <button class="rounded-lg bg-[#B68C5A] font-semibold text-xl px-10 py-4 text-white">Send Message</button>
+        </div>
+
+      </div>
+    </section>
   </main>
-  <footer></footer>
+  <footer class="py-[120px] bg-[#111111] px-4">
+    <div class=" mx-auto max-w-[1170px] text-center md:text-left">
+
+      <div class="grid md:grid-cols-2 lg:grid-cols-12 lg:gap-6 gap-16">
+
+        <div class="lg:col-span-3">
+          <img class="mb-8 mx-auto md:mx-0" src="./images/logo.png" alt="">
+          <p class="text-[#CFCFCF]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+            in some form, by injected humour.</p>
+        </div>
+
+        <div class="lg:col-span-2">
+          <h3 class="md:mb-10 mb-6 text-white eb-font font-extrabold text-2xl">Useful Links</h3>
+          <ul class="text-[#CFCFCF]">
+            <li class="mb-4">Home</li>
+            <li class="mb-4">About Us</li>
+            <li class="mb-4">Cases</li>
+            <li class="mb-4">Blog</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
+
+        <div class="lg:col-span-3">
+          <h3 class="md:mb-10 mb-6 text-white eb-font font-extrabold text-2xl">Contact Now</h3>
+
+          <p class="text-[#CFCFCF] mb-4">555 4th 5t NW, Washington <br>
+            DC 20530, United States</p>
+
+          <p class="text-[#CFCFCF] mb-4">+88 01750 000 000 <br>
+            +88 01750 000 000</p>
+
+          <p class="text-[#CFCFCF]">info@gmail.com <br>
+            info@gmail.com</p>
+        </div>
+
+        <div class="lg:col-span-4">
+          <h3 class="md:mb-10 mb-6 text-white eb-font font-extrabold text-2xl">Subscribe Now</h3>
+          <p class="text-[#CFCFCF] mb-4">Subscribe for our latest & Articles. We Won’t Give You Spam Mails</p>
+
+          <div class="relative flex rounded-lg overflow-hidden">
+            <input class="p-6 w-full" type="email" placeholder="Email Address">
+            <button class="absolute right-0 p-6 bg-[#B68C5A] rounded-lg"><i class="fa-regular fa-paper-plane"></i></button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
